# libyaml-cpp-wrapper

./: .clang-format  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: ci-jobs.yml
include/: file_unique_ptr.hpp  yaml_parser.hpp
src/: yaml_parser.cpp
test/: CMakeLists.txt  test_file_unique_ptr.cpp  test_read_yaml.cpp
